# zppy-interfaces

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CNAME  MANIFEST.in  pyproject.toml
.github/: pull_request_template.md
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  other_issue.yml
.github/workflows/: build_workflow.yml  release_workflow.yml
_build/html/main/: .buildinfo  developer_global_time_series.html  developer_guide.html  developer_pcmdi_diags.html  genindex.html  global_time_series.html  index.html  objects.inv  pcmdi_diags.html  search.html  searchindex.js  user_guide.html
_build/html/main/.doctrees/: developer_global_time_series.doctree  developer_guide.doctree  developer_pcmdi_diags.doctree  environment.pickle  global_time_series.doctree  index.doctree  pcmdi_diags.doctree  user_guide.doctree
conda/: dev.yml
docs/: Makefile
docs/source/: conf.py  developer_global_time_series.rst  developer_guide.rst  developer_pcmdi_diags.rst  global_time_series.rst  index.rst  pcmdi_diags.rst  user_guide.rst
examples/: run_zi_global-time-series.py
tests/global-time-series/: test_coupled_global.py
tests/global_time_series/: test_global_time_series.py
tests/integration/global_time_series/: cases_global_time_series.py
tests/unit/budget_analysis/: diagnose_ocn_closure.py  print_monthly_interface.py  test_atm_parser.py
tests/unit/global_time_series/: test_global_time_series.py
tests/unit/pcmdi_diags/: test_pcmdi_mean_climate.py  test_pcmdi_setup.py  test_pcmdi_variability_modes.py  test_synthetic_metrics_plotter.py  test_synthetic_plots_utils.py  test_viewer.py
zppy-interfaces/: __main__.py
zppy-interfaces/global-time-series/: coupled_global.py  global_time_series.py  ocean_month.py
zppy_interfaces/budget_analysis/: README.md  __init__.py  __main__.py  checks.py  normalization.py  parser.py  plotting.py  schema.py  viz.py
zppy_interfaces/budget_analysis/ingestion/: atm_parser.py  base.py  cpl_parser.py  ice_parser.py  lnd_parser.py  ocn_parser.py
zppy_interfaces/global_time_series/: __main__.py  coupled_global.py  coupled_global_dataset_wrapper.py  coupled_global_plotting.py  coupled_global_utils.py  coupled_global_viewer.py  create_ocean_ts.py  index_template.html  ocean_month.py  utils.py  zppy_land_fields.csv
zppy_interfaces/global_time_series/classic/: coupled_global.py  coupled_global_plotting.py  driver.py  ocean_month.py
zppy_interfaces/global_time_series/coupled_global/: driver.py  mix_pdf_original.py  mix_viewer_component.py  mix_viewer_original.py  mode_pdf.py  mode_viewer.py  plots_component.py  plots_original.py  plotting.py  utils.py
zppy_interfaces/global_time_series/viewer/: coupled_global.py  coupled_global_plotting.py  driver.py
zppy_interfaces/multi_utils/: logger.py  viewer.py
zppy_interfaces/pcmdi_diags/: link_observation.py  pcmdi_common.py  pcmdi_enso.py  pcmdi_mean_cimate.py  pcmdi_mean_climate.py  pcmdi_setup.py  pcmdi_synthetic_plots.py  pcmdi_variability_modes.py  pcmdi_viewer_util.py  pcmdi_zppy_util.py  utils.py  viewer.py
zppy_interfaces/pcmdi_diags/synthetic_plots/: clim_metrics_merger.py  clim_metrics_reader.py  enso_metrics_reader.py  movs_metrics_reader.py  synthetic_metrics_plotter.py  utils.py
