[project]
name = "zppy_interfaces"
dynamic = ["version"]
authors = [
    { name="Ryan Forsyth", email="forsyth2@llnl.gov" }
]
description = "A package for providing extra functionality on top of external packages"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    # these are only for searching/browsing projects on PyPI
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib-base >=3.8.2,<3.10",
    "netcdf4",
    "numpy >=2.0,<3.0",
    "xarray >=2023.02.0",
    "xcdat >=0.7.0,<1.0",
]

[project.optional-dependencies]

testing = [
    "pytest",
    "pytest-cov",
]

docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-multiversion",
]

qa = [
    "black==23.9.1",
    "flake8==6.1.0",
    "flake8-isort==6.1.0",
    "isort==5.12.0",
    "mypy==1.5.1",
    "pre-commit >=3.0.0",
    "types-PyYAML >=6.0.0",
]

dev = [
    "tbump==6.9.0",
    "ipykernel",
]

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | conda
    | docs
 )/
'''

[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["docs*", "conda*"]

[tool.setuptools.dynamic]
version = { attr = "zppy_interfaces.version.__version__" }

# evolution of options.entry-points
[project.scripts]
zi-global-time-series = "zppy_interfaces.global_time_series.__main__:main"

[project.urls]
Documentation = "https://docs.e3sm.org/zppy-interfaces"
"Bug Tracker" = "https://github.com/E3SM-Project/zppy-interfaces/issues"
