[project]
name = "zppy_interfaces"
dynamic = ["version"]
authors = [
    { name="Ryan Forsyth", email="forsyth2@llnl.gov" }
]
description = "A package for providing extra functionality on top of external packages"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    # these are only for searching/browsing projects on PyPI
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

dependencies = [
    "beautifulsoup4",
    "lxml",
    "matplotlib >=3.8.2,<3.10",
    "netcdf4",
    "numpy >=2.0,<3.0",
    "xarray >=2023.02.0",
    "xcdat >=0.7.3,<1.0",
]

[project.optional-dependencies]

testing = [
    "pytest",
    "pytest-cov",
]

docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-multiversion",
]

qa = [
    "black==24.10.1",
    "flake8==7.1.1",
    "flake8-isort==6.1.0",
    "isort==5.13.2",
    "mypy==1.11.2",
    "pre-commit >=3.0.0",
    "types-PyYAML >=6.0.0",
]

dev = [
    "tbump==6.9.0",
    "ipykernel",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
      \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | conda
    | docs
 )/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pycodestyle]
max-line-length = 119
exclude =  '''
/(
      \.tox
    | \.git
    | */migrations/*
    | */static/CACHE/*
    | docs
    | node_modules
    | \.idea
    | \.mypy_cache
    | \.pytest_cache
    | *__init__.py
    | venv
 )/
'''

[tool.mypy]
python_version = 3.13
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [ "conda*", "docs*",  "tests*"]

[tool.setuptools.dynamic]
version = { attr = "zppy_interfaces.version.__version__" }

# evolution of options.entry-points
[project.scripts]
zi-global-time-series = "zppy_interfaces.global_time_series.__main__:main"

[project.urls]
Documentation = "https://docs.e3sm.org/zppy-interfaces"
"Bug Tracker" = "https://github.com/E3SM-Project/zppy-interfaces/issues"
